kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorite-beer
spec:
  template:
    spec:
      containers:
      - name: app
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
      volumes:
      - name: config-volume
        configMap:
          name: favorite-beer
