kustomize/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: favorite-beer-redis
spec:
  serviceName: favorite-beer-redis
  replicas: 1
  template:
    metadata:
    spec:
      containers:
      - name: favorite-beer-redis
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: redis
        volumeMounts:
        - name: redis-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      storageClassName: manual
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
