kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: favorite-beer
spec:
  rules:
  - host: favorite-beer
    http:
      paths:
      - backend:
          serviceName: favorite-beer
          servicePort: http
        path: /
commonLabels:
  app: favorite-beer
